# Bake-Engine

./: BakeEngine.cpp  BakeEngine.h  CMakeLists.txt  CMakePresets.json  vcpkg.json
Source/: main.cpp
Source/Engine/Core/: Engine.cpp  Engine.h  Logger.cpp  Logger.h  Subsystem.h
Source/Engine/Defines/: Types.h
Source/Engine/Input/: InputSubsystem.cpp  InputSubsystem.h  Keycodes.h
Source/Engine/Memory/: Allocator.cpp  Allocator.h
Source/Engine/Window/: Window.cpp  Window.h  WindowSubsystem.cpp  WindowSubsystem.h
Source/Engine/Window/Event/: Event.h
Source/Platform/Window_Win32/: Win32_Window.cpp  Win32_Window.h
